<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DashboardAdminActivity">

    <!-- Toolbar -->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/dashboard_admin"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/subTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/titleTv"
            android:text="@string/abc_example_com"
            android:textColor="@color/white"/>

        <ImageButton
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_logout_white"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"/>


    </RelativeLayout>

    <!--- Search -->
    <EditText
        android:id="@+id/searchEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarRl"
        android:autofillHints=""
        android:background="@color/white"
        android:padding="10dp"
        android:hint="@string/search"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_search_gray"
        android:textColorHint="@color/gray01"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchEt"
        android:layout_margin="5dp"
        tools:listitem="@layout/row_category"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_above="@+id/bottomLl"/>

    <LinearLayout
        android:id="@+id/bottomLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <!-- add category -->
        <Button
            android:id="@+id/addCategoryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_category"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_button01"
            android:minHeight="50dp"
            android:textAllCaps="false"
            android:textColor="@color/white"/>


        <!--- add PDF -->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPdfFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pdf_icon"
            android:src="@drawable/ic_pdf_add_white"
            app:tint="@color/white"
            app:fabCustomSize="50dp"
            android:backgroundTint="@color/purple_500"/>
    </LinearLayout>

</RelativeLayout>